# imessage-book

./: .gitignore  Cargo.toml  README.md  book.toml
.github/workflows/: ci.yml  formula.yml  release.yml
Formula/: imessage-book.rb
examples/: sample.rs
macos-app/: AppIcon.icns  Package.swift  README.md
macos-app/Sources/ImessageBook/: AppModel.swift  ConversationStepView.swift  Engine.swift  ImessageBookApp.swift  Invocation.swift  Models.swift  OptionsStepView.swift  RootView.swift  RunController.swift  RunStepView.swift  Screenshots.swift  Shared.swift  SourceStepView.swift
scripts/: build-app.sh  make-icon.sh  make-icon.swift  package-macos-app.sh  update-formula.sh
src/: assemble.rs  build.rs  cli.rs  config.rs  fixture_tests.rs  lib.rs  main.rs  model.rs  preview.rs
src/attachments/: convert.rs  icloud.rs  mod.rs
src/db/: contacts.rs  mod.rs  query.rs
src/render/: epub.rs  escape.rs  html.rs  json.rs  latex.rs  markdown.rs  mod.rs
templates/epub/: chapter.xhtml  front.xhtml  gallery.xhtml  style.css
templates/html/: page.html
templates/latex/: book.tex
tests/: render.rs
